BusyControl Prototype
