# SwaggerBasicAuthenticationLab/Controllers/WeatherForecastController.cs
@@ -33,16 +33,6 @@ namespace SwaggerBasicAuthenticationLab.Controllers
             .ToArray();
         }
 
-        [HttpGet("GetWeatherForecast2")]
-        public IEnumerable<WeatherForecast> GetWeatherForecast2()
-        {
-            return Enumerable.Range(1, 5).Select(index => new WeatherForecast
-            {
-                Date = DateOnly.FromDateTime(DateTime.Now.AddDays(index)),
-                TemperatureC = Random.Shared.Next(-20, 55),
-                Summary = Summaries[Random.Shared.Next(Summaries.Length)]
-            })
-            .ToArray();
-        }
+
     }
 }
